[package]
name = "TokioDispatch"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

